still working on the talents section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,22 @@
     @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
 }
 
-.hero-box-shadow {
-    /* box-shadow: inset -500px 20px black; */
+.talent-card {
+    @apply absolute ease-in-out duration-300 w-[750px] rounded-md bg-yellow-400;
+}
+
+.talent-card::before {
+    @apply absolute top-0 left-0 w-full h-full rounded-md;
+    content: '';
+    background: radial-gradient(400px circle at var(--x) var(--y), blue, transparent, transparent);
+    z-index: 2;
+}
+
+.talent-content {
+    @apply bg-red-400 rounded-md;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    margin: 1px;
 }
 
 .hero-box-shadow::after {
@@ -23,7 +37,7 @@
 .text-shine-purple {
     @apply bg-clip-text text-transparent;
     background-image: linear-gradient(80deg, oklch(0.714 0.203 305.504) 35%, oklch(0.902 0.063 306.703) 45%, white 50%, oklch(0.902 0.063 306.703) 55%, oklch(0.714 0.203 305.504) 65%);
-    animation: shine 15s ease-in-out infinite;
+    animation: shine 30s ease-in-out infinite;
     background-size: 400%;
 }
 
