--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,3 +118,22 @@ input[type="range"]::-moz-range-thumb {
         opacity: 1;
     }
 }
+
+/* ------------------------------- TOP PROJECT ------------------------------ */
+
+.conic-gradient {
+    background: conic-gradient(black 0deg, oklch(0.714 0.203 305.504) 180deg, black 180deg, oklch(0.714 0.203 305.504) 360deg);
+    scale: 2.3;
+    animation: rotate 5s infinite linear;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* ------------------------------------ - ----------------------------------- */
