--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,4 +136,17 @@ input[type="range"]::-moz-range-thumb {
     }
 }
 
-/* ------------------------------------ - ----------------------------------- */
+.fade-in {
+    animation: fade-in forwards ease-in-out;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        /* transform: translateY(50px); */
+    }
+    to {
+        opacity: 1;
+        /* transform: translateY(0px); */
+    }
+}
